# falcon-package-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: falcon-package-manager-config.cmake.in
include/falcon-package-manager/: PackageCache.hpp  PackageManager.hpp  PackageResolver.hpp
include/falcon-pm/: PackageCache.hpp  PackageManager.hpp  PackageManifest.hpp
src/: PackageCache.cpp  PackageManager.cpp  PackageManifest.cpp  PackageResolver.cpp  main_cli.cpp
tests/: test_cache.cpp  test_integration_github_packages.cpp  test_manifest.cpp  test_multimodule_packages.cpp  test_package_manager.cpp  test_resolver.cpp  test_version_resolution.cpp
